--- a/index.html
+++ b/index.html
@@ -342,11 +342,12 @@ function saveDB(){
 }
 function uid(){ return Math.random().toString(36).slice(2)+Date.now().toString(36); }
 function fmtMoney(n){ n=Number(n||0); const s=n<0?'-':''; n=Math.abs(n); return s+'£'+n.toFixed(2); }
+
 function ddmmyyyy(d){
   if(!d) return '';
   const t=(d||'').split('T')[0]||d;
   const a=t.split('-'); // yyyy-mm-dd
-  return a.length===3 ? (a[2]+'-'+a[1]+'-'+a[0]) : d; // dd-mm-yyyy
+  return a.length===3 ? (a[2]+'/'+a[1]+'/'+a[0]) : d; // dd/mm/yyyy
 }
 
 function isoFromDMY(dmy){
@@ -4108,16 +4109,11 @@ function viewSales(){
       });
     }
 
-    // Expected dates (you can change rules here)
+    // Expected dates (same day as Sale Date for ALL)
     push('deposit', s.deposit, baseDate, 'Auto: deposit');
     push('cash',    s.cash,    baseDate, 'Auto: cash');
     push('bank',    s.bank,    baseDate, 'Auto: bank transfer');
-
-    // Card usually settles later (default +3 days)
-    push('card',    s.card,    addDaysISO(baseDate, 3), 'Auto: card settlement');
-
-    // Finance: default expected = sale date (change to +1/+2 if you want)
-    // Also include finance company name if available
+    push('card',    s.card,    baseDate, 'Auto: card settlement');
     const finNote = s.financeCompany ? `Auto: finance payout (${s.financeCompany})` : 'Auto: finance payout';
     push('finance', s.finance, baseDate, finNote);
 
@@ -4841,7 +4837,7 @@ function viewSales(){
       const expDMY = prompt(`Expected date (DD/MM/YYYY) for ${typeLabel(t)}:`, defDMY);
       if (expDMY === null) return;
 
-      const expISO = isoFromDMY(expDMY);
+      const expISO = String(s.date || new Date().toISOString().slice(0,10)).slice(0,10);
       if (!expISO) return alert('Invalid date. Use DD/MM/YYYY');
 
       const noteDefault =
